Pad reviews, adding correct spacing between reviews

--- a/client/src/components/Review.css
+++ b/client/src/components/Review.css
@@ -2,10 +2,10 @@
 .full-review {
   display: flex;
   flex-wrap: wrap;
-
   color: black;
   font-size: 16px;
   line-height: 22px;
+  padding-bottom: 20px;
   border-bottom: solid #efefef 1px;
   width: 594px;
   margin-top: 20px;
